samples/_failures_safe/1761224242_dc22b0_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_45d7e458.c: In function ‘main’:
./samples/SAFE/__tmp_45d7e458.c:138:5: error: expected expression at end of input
  138 |     if (compressed_size == 0)
      |     ^~
./samples/SAFE/__tmp_45d7e458.c:138:5: error: expected declaration or statement at end of input
